plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'

    id 'com.google.gms.google-services'
    id 'com.google.firebase.crashlytics'
    id 'com.google.firebase.firebase-perf'
}

kotlin {
    sourceSets.configureEach {
        languageSettings {
            languageVersion = "2.0"
        }
    }
}

android {
    namespace 'com.dublikunt.nclient'
    compileSdk 34

    defaultConfig {
        applicationId "com.dublikunt.nclient"
        minSdk 24
        targetSdk 34
        versionCode 211
        multiDexEnabled true
        versionName '2.1.1'
        vectorDrawables.useSupportLibrary true
    }
    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            versionNameSuffix "-release"
            resValue "string", "app_name", "NClient"
            packagingOptions {
                exclude "**/DebugProbesKt.bin"
                exclude "**/kotlin-tooling-metadata.json"
                exclude "**/README.md"
                exclude "**/CHANGES"
                exclude "**/*.version"
                exclude "/okhttp3/internal/publicsuffix/NOTICE"
            }
        }
        debug {
            versionNameSuffix "-debug"
            resValue "string", "app_name", "NClient Debug"
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    packagingOptions {
        resources {
            excludes += ['**/*.kotlin_builtins', '**/*.kotlin_module', '**/*.properties']
        }
    }
    dependenciesInfo {
        includeInBundle false
        includeInApk false
    }
}

dependencies {
    // AndroidX dependencies
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.fragment:fragment-ktx:1.6.2'
    implementation 'androidx.preference:preference-ktx:1.2.1'
    implementation 'androidx.viewpager2:viewpager2:1.1.0-beta02'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
    implementation 'androidx.core:core-ktx:1.12.0'
    implementation 'com.google.android.material:material:1.10.0'

    // Third party dependencies
    implementation 'com.squareup.okhttp3:okhttp-urlconnection:5.0.0-alpha.11'
    implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
    implementation 'org.jsoup:jsoup:1.16.2'
    implementation 'com.github.skydoves:colorpickerview:2.3.0'
    implementation 'me.zhanghai.android.fastscroll:library:1.3.0'

    // Glide dependencies
    implementation 'com.github.bumptech.glide:glide:4.16.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
    implementation 'com.github.bumptech.glide:okhttp3-integration:4.16.0'

    // Analytic dependencies
    implementation platform('com.google.firebase:firebase-bom:32.5.0')
    implementation 'com.google.firebase:firebase-crashlytics-ktx'
    implementation 'com.google.firebase:firebase-analytics-ktx'
    implementation 'com.google.firebase:firebase-perf-ktx'
}
